# pie

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  AGENTS.md  AUDIO_OUTPUT.md  BRIDGE.md  BRIDGE_CODE_QUALITY_REVIEW.md  BRIDGE_REDESIGN.md  CHANGELOG.md  Cargo.toml  Dockerfile.cuda  EXPERIMENTAL_VLLM_SGL_DRIVER.md  INFERENCE_POLYMORPHISM.md  KV_CONTENTION_ORCHESTRATOR_GAP.md  LOADER.md  LOADER_REDESIGN.md  LOADER_RUST.md  MULTIMODAL.md  NEW_DRIVER.md  NOTICE  OPTIM_HISTORY.md  PLEX_DESIGN_ISSUES.md  PTIR_HANDOFF.md  README.md  REMAINING.md  TODO.md  WEIGHT_LOADER_TODO.md  analyze_results.py  benchmark_gsm8k.py  benchmark_results.json  benchmark_results_test_n3.json  boundary.md  contention-impl.md  contention-plan.md  cpp-refact-metal.md  cpp-refact.md  direct_ffi.md  direct_ffi_fix.md  direct_ffi_new_plan.md  (+42 more)
bootstrap/: Cargo.toml
bootstrap/src/: config.rs  lib.rs  lifecycle.rs  observe.rs  paths.rs
controller/: Cargo.toml  README.md
controller/src/: actor.rs  controller.rs  coordinator.rs  error.rs  health.rs  lib.rs  main.rs  pairing.rs  protocol.rs  role.rs  rpc.rs  serve.rs  service.rs  state.rs  store.rs  topology.rs
driver/bridge/: .gitignore  BENCHMARKS.md  Cargo.toml  MIGRATION.md  README.md  build.rs  pyproject.toml
driver/bridge-macros/: Cargo.toml
driver/bridge-macros/src/: lib.rs
driver/bridge/benches/: direct_ffi.rs  shmem.rs  wire.rs
driver/bridge/examples/: encode_sample_frame.rs
driver/bridge/include/: pie_bridge.h
driver/bridge/src/: brle.rs  capabilities.rs  ffi.rs  ipc.rs  lib.rs  python.rs  schema.rs  wire.rs
driver/bridge/tests/: archived_layout.rs  cabi_round_trip.rs  desc_layout.rs  direct_ffi_view.rs  edge_cases.rs  ipc_shmem_inproc.rs  round_trip_schema.rs
driver/cuda/: CMakeLists.txt  README.md  check-structure.sh  dev.toml
driver/cuda/cmake/: DetectCudaArchitecture.cmake
driver/cuda/src/: abi.cpp  attention_workspace.cpp  attention_workspace.hpp  brle.cpp  config.hpp  context.cpp  context.hpp  control_socket.cpp  control_socket.hpp  cuda_check.hpp  cuda_memory_planner.cpp  cuda_memory_planner.hpp  custom_all_reduce.cu  custom_all_reduce.hpp  custom_all_reduce_stub.cpp  device_buffer.hpp  distributed.cpp  distributed.hpp  dsa_cache.cpp  (+53 more)
driver/dev/: README.md  pyproject.toml
driver/dummy/: Cargo.toml  README.md
driver/ipc/: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  build.rs
driver/metal/: CMakeLists.txt  README.md  dev.toml
driver/portable/: .gitignore  CMakeLists.txt  MULTIMODAL.md  README.md  dev.toml  dev_gemma4.toml  dev_gpt_oss.toml  dev_ministral3.toml  dev_mixtral.toml  dev_olmo3.toml  dev_qwen3_5.toml  dev_qwen3_5_35b.toml  dev_qwen3_5_4b.toml  dev_qwen3_moe.toml  dev_qwen3_q4km.toml
driver/sglang/: README.md  pyproject.toml
driver/tensorrt_llm/: README.md  pyproject.toml
driver/vllm/: README.md  pyproject.toml
driver/weight_loader/: Cargo.toml  bench_loader.sh  build.rs  cbindgen.toml
gateway/: Cargo.toml
gateway/src/: admission.rs  blob.rs  controller.rs  edge_rpc.rs  lib.rs  main.rs  route.rs  session.rs  worker.rs
gateway/tests/: gateway_smoke.rs
inferlets/pie-control/: .gitignore  Cargo.toml  Pie.toml  e2e_test.py
interface/client/: Cargo.toml
interface/controller/: Cargo.toml
interface/driver/: Cargo.toml  build.rs
interface/ids/: Cargo.toml
interface/plex/: Cargo.toml
interface/ptir/: Cargo.toml  PTIR-CONTAINER.md
interface/sampling-ir/: BYTECODE.md  Cargo.toml  PTIR-CONTAINER.md
pie/: pyproject.toml
pie/src/: client.rs  main.rs  server.rs
pie/tests/: debug_batch_size.py  debug_packed.py  test_auth.py  test_cli.py  test_cond_graph.py  test_config.py  test_mamba_allocator.py  test_model.py  test_path.py
runtime/: Cargo.toml  README.md  check_output.txt
runtime/benches/: driver_channel.rs  inferlet_bench.rs  page_trim_bench.rs  pagestore_bench.rs
runtime/engine/: Cargo.toml  README.md
runtime/grammar/: Cargo.toml
runtime/load-planner/: Cargo.toml  audit_fleet.sh  bench_planner.sh  build.rs
runtime/model/: Cargo.toml
runtime/policy/: Cargo.toml
runtime/src/: actor.rs  adapter.rs  api.rs  api_legacy.rs  api_new.rs  auth.rs  auth_new.rs  backend.rs  blob_store.rs  bootstrap.rs  brle.rs  contention.rs  context.rs  daemon.rs  device.rs  driver.rs  dummy.rs  engine.rs  ffi.rs  grammar.rs  inference.rs  instance.rs  kvcache.rs  kvs.rs  legacy_kvs.rs  legacy_messaging.rs  legacy_model.rs  legacy_runtime.rs  legacy_server.rs  legacy_service.rs  lib.rs  linker.rs  messaging.rs  metadata_store.rs  model.rs  model_new.rs  multimodal.rs  policy.rs  process.rs  program.rs  (+12 more)
runtime/tests/: acquire_timeout.rs  adapter.rs  arena_residency.rs  concurrent_race.rs  contention.rs  context.rs  e2e.rs  eval_mock.rs  eviction.rs  forward_txn.rs  inference.rs  inferlet_canary.rs  kv_retention.rs  lowlevel_chat_mock.rs  metadata_store.rs  no_context.rs  north_star_e2e.rs  program.rs  programmable_sampler_e2e.rs  resilience.rs  rs_cache.rs  rs_cache_kv_only.rs  rs_cache_one_slot.rs  rs_cache_replay.rs  rs_working_set.rs  runahead_alloc.rs  sampler_assert.rs  smoke.rs  structured.rs  tokenizer.rs  tokenizer_compat.rs  tool_use_e2e.rs
runtime/tokenizer/: Cargo.toml
runtime/waker/: Cargo.toml
runtime/weight-loader/: Cargo.toml  build.rs
runtime/wit/: deps.toml  world.wit
server/: Cargo.toml  README.md  build.rs
server/examples/: dummy_roundtrip.rs
server/src/: aux_ipc.rs  bootstrap_translate.rs  cli.rs  config.rs  driver_ffi.rs  embedded_driver.rs  hf.rs  lib.rs  main.rs  paths.rs  py_runtime.rs  python_resolve.rs  rpc_loop.rs  serve.rs  subprocess_driver.rs
server/standalone/: Cargo.toml  README.md  build.rs
transport/: Cargo.toml
transport/src/: lib.rs
worker/: Cargo.toml  README.md  build.rs
worker/examples/: dummy_roundtrip.rs
worker/src/: bootstrap_translate.rs  cli.rs  client_server.rs  config.rs  driver_ffi.rs  embedded_driver.rs  engine.rs  hf.rs  lib.rs  lifecycle.rs  link.rs  main.rs  preflight.rs  py_runtime.rs  serve.rs  translate.rs  weights.rs
worker/tests/: cuda_canaries.rs  cuda_forward.rs  cuda_kv_cas.rs  cuda_multimodal.rs
(+3988 files in other folders)
