[package]
name = "pie-controller"
version = "0.1.0"
edition = "2024"
authors = ["In Gim <in.gim@icloud.com>"]
description = "Distributed control plane for Pie"
license = "Apache-2.0"
repository = "https://github.com/pie-project/pie"

[lib]
name = "pie_controller"
path = "src/lib.rs"
crate-type = ["rlib"]

# The standalone binary is auto-detected from `src/main.rs` and named after the
# package (`pie-controller`); no explicit `[[bin]]` needed.

[dependencies]
# Wire data types (`pie_schema::control::*`) — the static-serde floor.
pie-schema = { path = "../protocol/schema", default-features = false }
# The `Control` tarpc service contract (trait + generated client), shared with
# worker + gateway so neither depends on `pie-controller`.
pie-control = { path = "../protocol/control" }
# tarpc serves the `Control` RPC: Bincode over tarpc-native TCP or Unix sockets.
tarpc = { version = "0.35", features = [
    "serde-transport",
    "serde-transport-bincode",
    "tcp",
    "unix",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
futures = "0.3"
tracing = "0.1"
clap = { version = "4.5", features = ["derive"] }
