[package]
name = "pie-controller"
version = "0.1.0"
edition = "2024"
authors = ["In Gim <in.gim@icloud.com>"]
description = "Cluster-coordination control plane for Pie — node pairing, role assignment, health. Control messages only; never touches tensor bytes."
license = "Apache-2.0"
repository = "https://github.com/pie-project/pie"

# Library half — the embeddable in-proc coordination API. The worker links
# this directly when run on-device (`--standalone`), so the controller lives
# in the worker's address space with no network hop.
[lib]
name = "pie_controller"
path = "src/lib.rs"
crate-type = ["rlib"]

# Binary half — the standalone controller process. Used in the distributed
# topology, where workers reach it over the network (`--controller=addr`).
# Same coordination library, different deployment form.
[[bin]]
name = "pie-controller"
path = "src/bin/pie-controller.rs"

[dependencies]
# `pie-schema` carries the control-message vocabulary — `WorkerId`, `Role`,
# `WorkerInfo`, `HealthStatus` (re-exported from `pie_schema::cluster`).
# Dependency edges point DOWNWARD only — the controller depends on schema,
# never on runtime/transport/driver. `default-features = false` keeps the
# control plane out of the `cabi`/`python` surfaces.
pie-schema = { path = "../protocol/schema", default-features = false }
serde = { version = "1.0", features = ["derive"] }
# Length-prefixed MessagePack framing for the control-RPC (distributed mode).
# Matches the repo's existing wire-serialization choice.
rmp-serde = "1.3"
thiserror = "2.0"
tracing = "0.1"
# Argv parsing for the standalone process entry, matching the `clap` derive
# style used by `pie-server`.
clap = { version = "4.5", features = ["derive"] }
