[package]
name = "pie-gateway"
version = "0.1.0"
edition = "2024"
authors = ["In Gim <in.gim@icloud.com>"]
description = "Client-facing edge plane for Pie: terminates client WebSockets and routes sessions to workers"
license = "Apache-2.0"
repository = "https://github.com/pie-project/pie"

[lib]
name = "pie_gateway"
path = "src/lib.rs"
crate-type = ["rlib"]

# The standalone binary is auto-detected from `src/main.rs` and named after the
# package (`pie-gateway`); no explicit `[[bin]]` needed.

[dependencies]
# Id atoms (WorkerId/GatewayId/NodeId/ReqId/SessionId/TenantId).
pie-ids = { path = "../interface/ids" }
# Control plane: the gateway is a `pie_controller_rpc::ControlClient` of the
# controller — it registers, heartbeats, and long-polls the routing table, then
# selects a worker locally per session (no per-request controller RPC). Also the
# control data vocabulary (RoutingTable, RoutableWorker, Health, Role, ...).
pie-controller-rpc = { path = "../interface/controller" }
# Data plane: the gateway SERVES `GatewayInbound` and is a client of
# `WorkerControl` over one worker-dialed-in connection (split with `spawn_twoway`
# via the typed `accept_gateway_link`). Workers dial IN (M3 inversion). Also the
# gateway data vocabulary (Request, Accepted, Tokens, BlobRef, Priority, Control).
pie-worker-rpc = { path = "../interface/worker" }
# Client-facing edge payloads (`ClientMessage`/`ServerMessage`).
pie-client-api = { path = "../interface/client" }
serde = { version = "1.0", features = ["derive"] }
# Pure TOML config parsing (`Config::parse`); the `bootstrap` skeleton sources the
# config string (file + env), this crate only parses it.
toml = "1.1"
# Dyn-safe async traits: charlie's `TurnRouter` seam + bravo's `BlobStore`.
async-trait = "0.1"
# `serde-transport-bincode` = control-plane codec (pie-controller-rpc client). The
# data-plane codec is single-sourced in `pie-worker-rpc` (`dispatch_codec`,
# MessagePack), so no `serde-transport-json` here.
tarpc = { version = "0.37", features = [
    "serde-transport",
    "serde-transport-bincode",
    "tcp",
    "unix",
    "tokio1",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
# Client-facing HTTP/WS edge: ingress + blob route-providers merge onto the one
# `axum::serve` this crate owns. `ws` for the multi-turn WebSocket adapter.
axum = { version = "0.8", features = ["ws"] }
# JSON wire for the REST/SSE ingress adapters.
serde_json = "1"
# MessagePack wire for the multi-turn WS ingress — matches the `pie-client`
# edge (`rmp_serde`, binary frames). The client encodes `ClientMessage` and
# decodes `ServerMessage` as MessagePack over `Message::Binary`, so the WS
# adapter speaks the same codec (a JSON/Text adapter is silently dropped by the
# client's binary-only reader).
rmp-serde = "1.3.1"
# WebSocket edge — versions matched to the runtime so there's one shared build.
futures = "0.3.33"
# Content-addressed blob store (bravo): blake3 addressing over axum byte bodies.
bytes = "1"
blake3 = "1"
anyhow = "1"
tracing = "0.1"
clap = { version = "4.6", features = ["derive"] }

[dev-dependencies]
# Blob route `oneshot` tests (bravo's `blob.rs`).
tower = { version = "0.5", features = ["util"] }
