[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pie-server"
version = "0.3.0"
description = "Programmable Inference Engine"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"
authors = [{ name = "In Gim", email = "in.gim@icloud.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Base dependencies (CPU compatible / PyPI available)
dependencies = [
    "einops>=0.8.1",
    "fire>=0.6",
    "httpx>=0.27",
    "huggingface_hub>=1.2.4",
    "numba>=0.63",
    "msgpack>=0.5",
    "msgspec>=0.19.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "pie-bakery",
    "pie-client",
    "platformdirs>=4.3",
    "psutil>=7.1.3",
    "pyzmq>=27.0.0",
    "requests>=2.32",
    "rich>=13.0",
    "safetensors>=0.6.2",
    "toml>=0.10",
    "tqdm>=4.67",
    "typer>=0.12",
    "websockets>=15.0",
    "ztensor>=0.1.4",
    "textual>=7.2.0",
]

[project.optional-dependencies]

# --- CUDA ---
cu126 = [
    "torch>=2.7.1",
    "torchao>=0.14.1",
    "flashinfer-python>=0.6.1",
    "flashinfer-cubin>=0.6.1",
]

cu128 = [
    "torch>=2.7.1",
    "torchao>=0.14.1",
    # All three flashinfer packages must agree on the patch version — the
    # Python wrapper, the cubin loader, and the precompiled C ops have
    # ABI-coupled signatures. vllm pins flashinfer-python==0.6.8.post1,
    # so we lock the other two to match.
    "flashinfer-python==0.6.8.post1",
    "flashinfer-cubin==0.6.8.post1",
    "flashinfer-jit-cache==0.6.8.post1",
]

cu129 = [
    "torch>=2.11.0",
    "torchao>=0.14.1",
]

# --- Metal (macOS) ---
metal = [
    "torch>=2.7.1",
    "torchao>=0.14.1",
    "pyobjc-core>=10.0,<11.0",
    "pyobjc-framework-Metal>=10.0,<11.0",
    "pyobjc-framework-MetalKit>=10.0,<11.0",
    "pyobjc-framework-Cocoa>=10.0,<11.0",
]

[project.scripts]
pie = "pie_cli.cli:app"

# --- UV Configuration ---

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "flashinfer-cu128"
url = "https://flashinfer.ai/whl/cu128"
explicit = true

[tool.uv.sources]

# Local workspace members
pie-client = { path = "../client/python", editable = true }
pie-bakery = { path = "../sdk/tools/bakery", editable = true }

torch = [
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu129", extra = "cu129" },
]
torchao = [
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu129", extra = "cu129" },
]

flashinfer-jit-cache = [
    { index = "flashinfer-cu128", extra = "cu128" },
]

[tool.maturin]
python-source = "src"
python-packages = ["pie", "pie_cli", "pie_driver", "pie_driver_cuda_native", "pie_driver_portable", "pie_driver_vllm", "pie_driver_sgl", "pie_driver_dummy", "pie_kernels"]
module-name = "pie._runtime"
manifest-path = "../runtime/Cargo.toml"
features = ["pyo3/extension-module"]

[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "../runtime/Cargo.toml"}, {file = "../runtime/**/*.rs"}]

conflicts = [
    [
        { extra = "cu126" },
        { extra = "cu128" },
        { extra = "cu129" },
        { extra = "metal" },
    ],
]
