[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pie-server"
version = "0.3.0"
description = "Programmable Inference Engine"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"
authors = [{ name = "In Gim", email = "in.gim@icloud.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Base dependencies (CPU compatible / PyPI available)
dependencies = [
    "einops>=0.8.1",
    "fire>=0.6",
    "httpx>=0.27",
    # vLLM 0.16.0's transformers (4.56-4.57) caps hf_hub at <1.0; pie's
    # use (snapshot_download, scan_cache_dir, HF_HUB_CACHE) works on the
    # 0.34+ surface, so the wider lower bound keeps both extras resolvable.
    "huggingface_hub>=0.34.0",
    "numba>=0.63",
    "msgpack>=0.5",
    "msgspec>=0.19.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "pie-bakery",
    "pie-client",
    "platformdirs>=4.3",
    "psutil>=7.1.3",
    "pyzmq>=27.0.0",
    "requests>=2.32",
    "rich>=13.0",
    "safetensors>=0.6.2",
    "toml>=0.10",
    "tqdm>=4.67",
    "typer>=0.12",
    "websockets>=15.0",
    "ztensor>=0.1.4",
    "textual>=7.2.0",
]

[project.optional-dependencies]

# --- CUDA ---
cu126 = [
    "torch>=2.7.1",
    "torchao>=0.14.1",
    "flashinfer-python>=0.6.1",
    "flashinfer-cubin>=0.6.1",
]

cu128 = [
    "torch>=2.7.1",
    "torchao>=0.14.1",
    # All three flashinfer packages must agree on the patch version — the
    # Python wrapper, the cubin loader, and the precompiled C ops have
    # ABI-coupled signatures. vllm pins flashinfer-python==0.6.8.post1,
    # so we lock the other two to match.
    "flashinfer-python==0.6.8.post1",
    "flashinfer-cubin==0.6.8.post1",
    "flashinfer-jit-cache==0.6.8.post1",
]

# --- Metal (macOS) ---
metal = [
    "torch>=2.7.1",
    "torchao>=0.14.1",
    "pyobjc-core>=10.0,<11.0",
    "pyobjc-framework-Metal>=10.0,<11.0",
    "pyobjc-framework-MetalKit>=10.0,<11.0",
    "pyobjc-framework-Cocoa>=10.0,<11.0",
]

# --- vLLM driver (experimental) ---
# vLLM 0.16.0 is the newest release that pins torch==2.9.1 and ships a
# CUDA 12.x wheel; vLLM 0.20.x requires torch 2.11 + CUDA 13. Co-resolves
# with the `sglang` extra; conflicts with `cu126` / `cu128` because the
# torch pin diverges from pie's default 2.7+ baseline. The override pins
# below resolve metadata conflicts vs. the `sglang` extra (vLLM ships
# llguidance 1.3.x / xgrammar 0.1.29 / outlines-core 0.2.11; SGLang ships
# llguidance 0.7.x / xgrammar 0.1.27 / outlines 0.1.11 — taking vLLM's
# side breaks SGLang's structured-output paths but is harmless for plain
# generation).
vllm = [
    "torch==2.9.1",
    "torchvision==0.24.1",
    "torchaudio==2.9.1",
    "torchao==0.9.0",
    "vllm==0.16.0",
    "flashinfer-python==0.6.3",
    "flashinfer-cubin==0.6.3",
    "flashinfer-jit-cache==0.6.3",
]

# --- SGLang driver (experimental) ---
# SGLang 0.5.9 is the newest release that pins flashinfer 0.6.3, which
# matches vLLM 0.16.0's pin so the two extras are jointly installable.
# Like `vllm`, this conflicts with `cu126` / `cu128` (torch 2.9.1 vs.
# pie default 2.7+).
sglang = [
    "torch==2.9.1",
    "torchvision==0.24.1",
    "torchaudio==2.9.1",
    "torchao==0.9.0",
    "sglang==0.5.9",
    "flashinfer-python==0.6.3",
    "flashinfer-cubin==0.6.3",
    "flashinfer-jit-cache==0.6.3",
]

[project.scripts]
pie = "pie_cli.cli:app"

# --- UV Configuration ---

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "flashinfer-cu128"
url = "https://flashinfer.ai/whl/cu128"
explicit = true

[tool.uv.sources]

# Local workspace members
pie-client = { path = "../client/python", editable = true }
pie-bakery = { path = "../sdk/tools/bakery", editable = true }

torch = [
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu128", extra = "vllm" },
    { index = "pytorch-cu128", extra = "sglang" },
]
torchvision = [
    { index = "pytorch-cu128", extra = "vllm" },
    { index = "pytorch-cu128", extra = "sglang" },
]
torchaudio = [
    { index = "pytorch-cu128", extra = "vllm" },
    { index = "pytorch-cu128", extra = "sglang" },
]
torchao = [
    { index = "pytorch-cu128", extra = "cu128" },
]

flashinfer-jit-cache = [
    { index = "flashinfer-cu128", extra = "cu128" },
    { index = "flashinfer-cu128", extra = "vllm" },
    { index = "flashinfer-cu128", extra = "sglang" },
]

[tool.maturin]
python-source = "src"
python-packages = ["pie", "pie_cli", "pie_driver", "pie_driver_cuda_native", "pie_driver_portable", "pie_driver_vllm", "pie_driver_sgl", "pie_driver_dummy", "pie_kernels"]
module-name = "pie._runtime"
manifest-path = "../runtime/Cargo.toml"
features = ["pyo3/extension-module"]

[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "../runtime/Cargo.toml"}, {file = "../runtime/**/*.rs"}]

# Resolve the structured-decoding pins where vLLM 0.16.0 and SGLang 0.5.9
# disagree. Taking vLLM's (newer) side: SGLang's grammar-constrained
# decoding paths will likely fail at runtime, but plain generation (the
# common case + what's covered by the smoke test) is unaffected. See
# EXPERIMENTAL_VLLM_SGL_DRIVER.md for the rationale.
override-dependencies = [
    "llguidance>=1.3.0,<1.4.0",
    "xgrammar==0.1.29",
    "outlines-core==0.2.11",
    "outlines>=1.2.0,<1.3.0",
    # vLLM 0.16.0 pins numba==0.61.2; pie's base requires >=0.63. Take
    # vllm's pin — pie's numba use (`@njit` in batching/attn metadata)
    # works on 0.61.x.
    "numba==0.61.2",
]

conflicts = [
    [
        { extra = "cu126" },
        { extra = "cu128" },
        { extra = "metal" },
        { extra = "vllm" },
        { extra = "sglang" },
    ],
]
