[package]
name = "pie"
version = "0.4.0"
edition = "2024"
authors = ["In Gim <in.gim@yale.edu>"]
description = "Programmable Inference Engine (Pie)"
license = "Apache-2.0"
repository = "https://github.com/pie-project/pie"

[lib]
name = "pie"
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
pie-ipc = { path = "../driver/ipc" }
pie-driver-abi = { path = "../interface/driver" }
pie-sampling-ir = { path = "../interface/sampling-ir" }
pie-client = { path = "../client/rust" }
tokio = { version = "1.52", features = ["full"] }
tokio-util = "0.7"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
dirs = "6.0"
rand = { version = "0.9.2", features = ["std_rng", "os_rng"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing = "0.1.41"
tracing-appender = "0.2"
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.27"
serde_json = { version = "1.0", features = ["preserve_order"] }
wasmtime = { version = "46.0.1", features = ["pooling-allocator"] }
wasmtime-wasi = "46.0.1"
wasmtime-wasi-http = "46.0.1"
bytes = "1.10.1"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
dashmap = "6.1.0"
boxcar = "0.2.13"
thiserror = "2.0.11"
futures = "0.3.31"
rmp-serde = "1.3.0"
blake3 = "1.8.2"
num-traits = "0.2.19"
rmpv = { version = "1.3.0", features = ["with-serde"] }
base64 = "0.22.1"
fancy-regex = "0.16.0"
once_cell = "1.21"
async-trait = "0.1.88"
wasm-encoder = { version = "0.244.0", features = ["wasmparser"] }
wasmparser = "0.244.0"
wasm-metadata = "0.244.0"
ring = "0.17"
ssh-key = { version = "0.6", features = ["rsa", "ed25519", "ecdsa"] }
rsa = { version = "0.9", features = ["pem", "sha2"] }
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
p256 = { version = "0.13", features = ["pkcs8", "ecdsa"] }
p384 = { version = "0.13", features = ["pkcs8", "ecdsa"] }
sha2 = "0.10"
chrono = "0.4"
ringbuffer = "0.15"
# default-features off so reqwest's `default-tls` (native-tls → openssl) is
# never pulled in: it dynamically links libssl.so.1.1, which doesn't exist on
# OpenSSL-3 distros (Ubuntu 22.04+) and breaks the manylinux_2_28 release
# binary. rustls is statically linked and distro-independent.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "charset"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
bytemuck = { version = "1.21", features = ["derive"] }
ipc-channel = "0.19"
rustc-hash = "2.1"
aho-corasick = "1"
memchr = "2"
unicode-normalization = "0.1"
smallvec = "1"
lru = "0.16.3"
ahash = "0.8.12"
ipnet = "2"
# Host-side media decode for the model-agnostic multimodal API: the inferlet
# hands raw encoded bytes (PNG/JPEG still, animated GIF) and the host decodes
# them here, then resizes/patchifies per the bound model. Lean feature set —
# WAV is parsed by hand in `multimodal::audio` (no extra crate).
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }

[features]
default = []
# Programmable-sampling output→tensor fast-path (#27 cut #1). Gates the host
# eager-D2H populate: the `extern "C"` `pie_pinned_alloc`/`pie_pinned_free`
# decls + the `sampling_output_*` carrier fill + the pinned `output()` read.
# OFF (host-only builds / `cargo test -p pie`) ⇒ the fast-path is compiled out
# entirely (the `pie_driver_cuda_lib` symbols are never referenced, so no
# undefined-symbol link error), leaving the legacy `ForwardResponse` output
# path. ON (propagated from `pie-worker`'s `driver-cuda`, which links
# `pie_driver_cuda_lib`) ⇒ the fast-path is active and the symbols resolve.
driver-cuda = []
# Host-side performance probes. Each scenario is a separate flag so you
# only pay for the probes you ask for — different domains have different
# sample rates and different audiences. The `probe_<domain>!` macros in
# `src/probe/` expand to zero code when their feature is off.
#
# Adding a new domain: define `src/probe/<domain>.rs` with its probe-holder
# struct + `probe_<domain>!` macro pair, then add a feature flag here.
profile-fire = []          # per-fire scheduler lifecycle (90×/sec at conc=256)
profile-driver-cuda = []   # driver_fire phase breakdown (Rust IPC + C++ host)
profile-hot-path = ["profile-fire", "profile-driver-cuda"]  # convenience bundle
profile-all = ["profile-fire", "profile-driver-cuda"]       # everything

[dev-dependencies]
tempfile = "3"
pie-sampling-ir = { path = "../interface/sampling-ir", features = ["eval"] }
criterion = { version = "0.5", features = ["html_reports"] }
tokenizers = "0.21"

[[bench]]
name = "inferlet_bench"
harness = false

[[bench]]
name = "pagestore_bench"
harness = false

[[bench]]
name = "page_trim_bench"
harness = false

[[bench]]
name = "driver_channel"
harness = false

#[profile.release]
#lto = "fat"
#codegen-units = 1
