[package]
name = "pie-server"
version = "0.3.0"
edition = "2024"
authors = ["In Gim <in.gim@icloud.com>"]
description = "Standalone Pie server (no Python). Embeds a native driver in-process."
license = "Apache-2.0"
repository = "https://github.com/pie-project/pie"

# Library half — the engine boot path (serve::start_engine, config types,
# the supervisors). The `pie` CLI binary below is one consumer; the
# `pie-server` Python wheel under `sdk/python-server/` is another.
[lib]
name = "pie_server"
path = "src/lib.rs"
crate-type = ["rlib"]

# Binary half — the `pie` CLI. Parses argv via clap and dispatches into
# the lib.
[[bin]]
name = "pie"
path = "src/main.rs"

[features]
# Default to portable plus the always-linked dummy driver. Enabling
# `driver-cuda` also links the native CUDA driver. `driver-dummy` is
# kept as a compatibility no-op for older build commands; the dummy
# Rust driver is no longer gated.
default = ["driver-portable"]
driver-portable = []
driver-cuda = []
driver-dummy = []

[dependencies]
# `pie` is the runtime crate. After Phase 8 deleted the legacy
# `pie._runtime` maturin module, runtime has no `python` feature to
# disable — pyo3 only lives in `sdk/python-rpc/` (the `pie-rpc` wheel)
# now, not in the runtime crate itself.
pie = { path = "../runtime" }
anyhow = "1.0"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
# HuggingFace snapshot resolver. Same `~/.cache/huggingface/hub/` layout
# the Python `huggingface_hub` package uses, so models downloaded by
# either path are interchangeable.
hf-hub = "1.0.0-rc.0"
# `shm_unlink` for the hard-kill cleanup path; see serve.rs's shutdown
# branch. Drivers normally clean up on graceful exit, but a SIGKILL
# leaves the POSIX shmem region behind — we call shm_unlink directly
# so the next launch doesn't trip on a stale segment.
libc = "0.2"
# CLI subcommand parsing — mirrors the Python pie_cli surface.
clap = { version = "4.5", features = ["derive"] }
# Local-time formatter for `pie auth add`'s default key-name timestamp,
# matching the Python wrapper's `%Y-%m-%d-%H:%M:%S` shape.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Python WASM runtime install (M8). The runtime tarball at
# `registry.pie-project.org/api/v1/runtimes/python3.14/.../download` is
# xz-compressed tar; `xz2` decompresses, `tar` extracts. `reqwest` is
# already in the dep tree (transitively via the runtime crate); we
# pin it directly here to make the dep explicit and pull in `blocking`.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "stream"] }
tar = "0.4"
xz2 = "0.1"

# Live TUI monitor (M10). ratatui + crossterm match the conventional
# pairing; nvml-wrapper feeds the GPU panel from libnvidia-ml.so when
# present (gracefully absent on macOS / non-NVIDIA hosts).
ratatui = "0.30"
crossterm = "0.29"
nvml-wrapper = "0.12"
# ratatui-widgets 0.3.1 currently fails to build with time 0.3.48
# because both crates provide overlapping From<HourBase> impls. Keep
# the resolver on the latest known-good 0.3.x release until ratatui
# updates its widget blanket impl or dependency constraints.
time = "=0.3.47"

# Always-linked Rust dummy driver — random tokens, no model load.
pie-driver-dummy = { path = "../driver/dummy" }

# Pie websocket client — used by `pie run` to drive an inferlet against
# the engine subprocess we boot. Same crate the dummy_roundtrip example
# uses.
pie-client = { path = "../client/rust" }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
cmake = "0.1"
