[package]
name = "pie-transport"
version = "0.1.0"
edition = "2024"
authors = ["In Gim <in.gim@yale.edu>"]
description = "Worker↔worker P2P KV-tensor data plane (RDMA) for pie."
license = "Apache-2.0"
repository = "https://github.com/pie-project/pie"

[dependencies]
thiserror = "1.0"
# `PeerConn` (the pairing payload: peer id + exported handle + opaque connect
# creds) crosses the control channel, so it derives serde — like the floor's
# control-plane vocab (`cluster`/`kv`).
serde = { version = "1.0", features = ["derive"] }

# KV layout + handle vocabulary live in `pie-schema` (the dependency floor):
# `pie_schema::kv::{KvLayout, KvDtype, KvLayoutKind, KvHandle, KvRegion,
# MemoryDomain}` — pure-Rust types (pie-schema is Python-free, no features).
pie-schema = { path = "../protocol/schema", default-features = false }

[features]
# Cross-node RDMA/TCP/NVMe path via NIXL. Off by default: the on-device build
# ships NIXL-free with only the `local` engine; the datacenter build enables it
# and bundles NIXL (only cuda/rocm pull it). Enabling it turns on the `bindgen`
# build-dependency, which generates the C-API bindings from the vendored
# `engines/nixl/wrapper.h` and links the wheel's `libnixl_capi.so` from
# `$NIXL_PREFIX` (see `build.rs`).
nixl = ["dep:bindgen"]

[build-dependencies]
# Only pulled in under `--features nixl` (generates the NIXL C-API bindings).
bindgen = { version = "0.71", optional = true }
